# mcp-doc-scraper

./: .gitignore  README.md  pyproject.toml  requirements.txt
doc_scraper/: __init__.py
mcp_doc_scraper/: __main__.py
