[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doc_scraper"
version = "0.1.0"
authors = []
description = "MCP server for scraping documentation"
requires-python = ">=3.7"
dependencies = [
    "aiohttp",
    "mcp",
    "pydantic"
]

[tool.setuptools]
packages = ["doc_scraper"]